plugins {
    id 'java-library'
    id 'maven-publish'
    id 'idea'
    id 'net.neoforged.moddev' version '2.0.140'
    id 'me.modmuss50.mod-publish-plugin' version '1.1.0'
}

def isSnapshotVersioning = project.hasProperty('snapshot_versioning') && project.property('snapshot_versioning').toString().toBoolean()
def resolvedVersion = isSnapshotVersioning ? "${mod_version}-SNAPSHOT" : mod_version

group = mod_group_id
version = resolvedVersion

base {
    archivesName = mod_id
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

repositories {
    maven { url = 'https://maven.neoforged.net/releases' }
    maven { url = 'https://maven.createmod.net' }
    exclusiveContent {
        forRepository {
            maven {
                url = "https://maven.ryanhcode.dev/releases"
                name = "RyanHCode Maven"
            }
        }
        filter {
            includeGroup("dev.ryanhcode.sable-companion")
        }
    }
    maven {
        name = 'azmod-maven'
        url = uri("https://maven.azmod.net/${findProperty('azmodRepository') ?: 'releases'}")
    }
    maven { url = "https://maven.ithundxr.dev/snapshots" } // Registrate
}

neoForge {
    version = neo_version
}

configurations {
    compileOnly.extendsFrom(annotationProcessor)
}

dependencies {
    implementation "net.neoforged:neoforge:${neo_version}"

    jarJar(api("dev.ryanhcode.sable-companion:sable-companion-common-${project.minecraft_version}:[${project.sable_companion_version},)")) {
        version {
            prefer project.sable_companion_version
        }
    }

    compileOnly("com.simibubi.create:create-${minecraft_version}:${create_version}:slim") { transitive = false }
    implementation("net.createmod.ponder:ponder-neoforge:${ponder_version}+mc${minecraft_version}")
    runtimeOnly("com.simibubi.create:create-${minecraft_version}:${create_version}:slim") { transitive = false }
    compileOnly("dev.engine-room.flywheel:flywheel-neoforge-api-${minecraft_version}:${flywheel_version}")
    runtimeOnly("dev.engine-room.flywheel:flywheel-neoforge-${minecraft_version}:${flywheel_version}")
    implementation("com.tterrag.registrate:Registrate:${registrate_version}")

}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

tasks.withType(ProcessResources).configureEach {
    def replaceProperties = [
            mod_version: project.version
    ]
    inputs.properties replaceProperties
    filesMatching(['META-INF/neoforge.mods.toml']) {
        expand replaceProperties
    }
}

tasks.register('sourcesJar', Jar) {
    archiveClassifier = 'sources'
    from sourceSets.main.allJava
}

jar {
    manifest {
        attributes('FMLModType': 'GAMELIBRARY')
    }
}

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
            artifact tasks.named('sourcesJar')
            groupId = mod_group_id
            artifactId = mod_id
            version = project.version
        }
    }

    repositories {
        maven {
            name = 'azmod-maven'
            url = uri("https://maven.azmod.net/${findProperty('azmodRepository') ?: 'releases'}")
            credentials {
                username = findProperty('azmodMavenUser') ?: System.getenv('AZMOD_MAVEN_USER')
                password = findProperty('azmodMavenToken') ?: System.getenv('AZMOD_MAVEN_TOKEN')
            }
        }
    }
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}

// ========================
// Changelog & Publishing
// ========================

String getRelevantChangelog(String targetVersion) {
    def changelogFile = file("CHANGELOG.md")
    if (!changelogFile.exists()) {
        return "No changelog found."
    }
    def lines = changelogFile.readLines()
    def result = new StringBuilder()
    def capturing = false
    def targetMinecraftVersion = targetVersion.split("-")[0]
    def targetModVersion = targetVersion.split("-").length > 1 ? targetVersion.split("-")[1] : ""
    def newerVersionsExist = false

    for (line in lines) {
        if (line.startsWith("# ")) {
            if (capturing) {
                break
            }
            def versionTag = line.substring(2).trim()
            def entryMinecraftVersion = versionTag.split("-")[0]
            def entryModVersion = versionTag.split("-").length > 1 ? versionTag.split("-")[1] : ""
            if (versionTag == targetVersion) {
                capturing = true
                continue
            }
            if (entryMinecraftVersion == targetMinecraftVersion && entryModVersion > targetModVersion) {
                newerVersionsExist = true
            }
        } else if (capturing && line.trim()) {
            result.append(line).append("\n")
        }
    }

    if (newerVersionsExist) {
        println("WARNING: Publishing an older version! Newer entries exist for Minecraft ${targetMinecraftVersion}.")
    }

    return result.length() > 0 ? result.toString().trim() : "No changelog entry found for version ${targetVersion}."
}

publishMods {
    file = jar.archiveFile
    def changelogText = getRelevantChangelog(minecraft_version + "-" + mod_version)
    changelog = changelogText
    println("Using changelog:\n" + changelogText + "\n")
    type = STABLE
    modLoaders.add("neoforge")
    displayName = "Strut Your Stuff" + " " + mod_version + " NeoForge " + minecraft_version

    curseforge {
        projectId = "1486746"
        projectSlug = "strut-your-stuff"
        accessToken = findProperty('curseforgePublishToken')
        minecraftVersions.add("1.21.1")
        optional("flywheel")
    }
    modrinth {
        projectId = "sHO3MhQx"
        accessToken = findProperty('modrinthPublishToken')
        minecraftVersions.add("1.21.1")
        optional("flywheel")
    }

    discord {
        webhookUrl = findProperty('aztechDiscordPublishWebhook')
        username = "struts version bot"
        avatarUrl = "https://cataas.com/cat?width=500&height=500"
        content = """
        # New Mod Release: ${getDisplayName().get()}
        ${changelogText}
        """.trim()
        style {
            look = "CLASSIC"
        }
    }
}
